// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`approveToOrg for a 1-team approval, sends teamInvite, clears requestNewUser, sends inviteeApproved 1`] = `
Object {
  "invitation": Array [
    Object {
      "createdAt": 2017-01-01T08:00:00.000Z,
      "email": "<<constant>>",
      "hashedToken": "HA$H",
      "id": "<<constant>>",
      "inviteCount": 1,
      "invitedBy": "<<constant>>",
      "teamId": "<<constant>>",
      "tokenExpiration": 2017-01-31T08:00:00.000Z,
      "updatedAt": 2017-01-01T08:00:00.000Z,
    },
  ],
  "notification": Array [
    Object {
      "id": 0,
      "inviteeEmail": 2,
      "inviterName": "Vision",
      "orgId": 3,
      "startAt": 2017-01-01T08:00:00.000Z,
      "teamId": 4,
      "teamName": "Team America",
      "type": "INVITEE_APPROVED",
      "userIds": Array [
        5,
      ],
    },
    Object {
      "id": 1,
      "inviteeEmail": 2,
      "inviterName": "Vision",
      "orgId": 3,
      "startAt": 2017-01-01T08:00:00.000Z,
      "teamId": 4,
      "teamName": "Team America",
      "type": "TEAM_INVITE",
      "userIds": Array [
        6,
      ],
    },
  ],
  "orgApproval": Array [
    Object {
      "approvedBy": 8,
      "createdAt": 2017-01-01T07:00:00.000Z,
      "email": 2,
      "id": 7,
      "isActive": true,
      "orgId": 3,
      "status": "APPROVED",
      "teamId": 4,
      "updatedAt": 2017-01-01T08:00:00.000Z,
    },
  ],
}
`;

exports[`approveToOrg for a 1-team approval, sends teamInvite, clears requestNewUser, sends inviteeApproved 2`] = `
Object {
  "deletedIds": Array [
    9,
  ],
}
`;

exports[`approveToOrg for a 1-team approval, sends teamInvite, clears requestNewUser, sends inviteeApproved 3`] = `
Object {
  "invitationAdded": Array [
    Object {
      "channelId": "<<constant>>",
      "message": Object {
        "invitationAdded": Object {
          "invitation": Object {
            "createdAt": 2017-01-01T08:00:00.000Z,
            "email": "<<constant>>",
            "hashedToken": "<<constant>>",
            "id": "<<constant>>",
            "inviteCount": 1,
            "invitedBy": "<<constant>>",
            "teamId": "<<constant>>",
            "tokenExpiration": 2017-01-31T08:00:00.000Z,
            "updatedAt": 2017-01-01T08:00:00.000Z,
          },
        },
        "operationId": 0,
      },
    },
  ],
  "notificationsAdded": Array [
    Object {
      "channelId": 5,
      "message": Object {
        "notificationsAdded": Object {
          "notifications": Array [
            Object {
              "id": 0,
              "inviteeEmail": 2,
              "inviterName": "Vision",
              "orgId": 3,
              "startAt": 2017-01-01T08:00:00.000Z,
              "teamId": 4,
              "teamName": "Team America",
              "type": "INVITEE_APPROVED",
              "userIds": Array [
                5,
              ],
            },
          ],
        },
        "operationId": 0,
      },
    },
    Object {
      "channelId": 6,
      "message": Object {
        "notificationsAdded": Object {
          "notifications": Array [
            Object {
              "id": 1,
              "inviteeEmail": 2,
              "inviterName": "Vision",
              "orgId": 3,
              "startAt": 2017-01-01T08:00:00.000Z,
              "teamId": 4,
              "teamName": "Team America",
              "type": "TEAM_INVITE",
              "userIds": Array [
                6,
              ],
            },
          ],
        },
        "operationId": 0,
      },
    },
  ],
  "notificationsCleared": Array [
    Object {
      "channelId": 8,
      "message": Object {
        "mutatorId": undefined,
        "notificationsCleared": Object {
          "deletedIds": Array [
            10,
          ],
        },
        "operationId": 0,
      },
    },
  ],
  "orgApprovalRemoved": Array [
    Object {
      "channelId": 4,
      "message": Object {
        "operationId": 0,
        "orgApprovalRemoved": Object {
          "orgApproval": Object {
            "approvedBy": 8,
            "createdAt": 2017-01-01T07:00:00.000Z,
            "email": 2,
            "id": 7,
            "isActive": true,
            "orgId": 3,
            "status": "APPROVED",
            "teamId": 4,
            "updatedAt": 2017-01-01T08:00:00.000Z,
          },
        },
      },
    },
  ],
}
`;

exports[`approveToOrg for a 2-team approval with different inviters, sends teamInvite, clears requestNewUser, sends inviteeApproved 1`] = `
Object {
  "invitation": Array [
    Object {
      "createdAt": 2017-01-01T08:00:00.000Z,
      "email": "<<constant>>",
      "hashedToken": "HA$H",
      "id": "<<constant>>",
      "inviteCount": 1,
      "invitedBy": "<<constant>>",
      "teamId": "<<constant>>",
      "tokenExpiration": 2017-01-31T08:00:00.000Z,
      "updatedAt": 2017-01-01T08:00:00.000Z,
    },
    Object {
      "createdAt": 2017-01-01T08:00:00.000Z,
      "email": "<<constant>>",
      "hashedToken": "HA$H",
      "id": "<<constant>>",
      "inviteCount": 1,
      "invitedBy": "<<constant>>",
      "teamId": "<<constant>>",
      "tokenExpiration": 2017-01-31T08:00:00.000Z,
      "updatedAt": 2017-01-01T08:00:00.000Z,
    },
  ],
  "notification": Array [
    Object {
      "id": 0,
      "inviteeEmail": 4,
      "inviterName": "Vision",
      "orgId": 5,
      "startAt": 2017-01-01T08:00:00.000Z,
      "teamId": 6,
      "teamName": "Team America",
      "type": "INVITEE_APPROVED",
      "userIds": Array [
        8,
      ],
    },
    Object {
      "id": 1,
      "inviteeEmail": 4,
      "inviterName": "Vision",
      "orgId": 5,
      "startAt": 2017-01-01T08:00:00.000Z,
      "teamId": 6,
      "teamName": "Team America",
      "type": "TEAM_INVITE",
      "userIds": Array [
        9,
      ],
    },
    Object {
      "id": 2,
      "inviteeEmail": 4,
      "inviterName": "War Machine",
      "orgId": 5,
      "startAt": 2017-01-01T08:00:00.000Z,
      "teamId": 7,
      "teamName": "team 2",
      "type": "INVITEE_APPROVED",
      "userIds": Array [
        10,
      ],
    },
    Object {
      "id": 3,
      "inviteeEmail": 4,
      "inviterName": "War Machine",
      "orgId": 5,
      "startAt": 2017-01-01T08:00:00.000Z,
      "teamId": 7,
      "teamName": "team 2",
      "type": "TEAM_INVITE",
      "userIds": Array [
        9,
      ],
    },
  ],
  "orgApproval": Array [
    Object {
      "approvedBy": 13,
      "createdAt": 2017-01-01T07:00:00.000Z,
      "email": 4,
      "id": 11,
      "isActive": true,
      "orgId": 5,
      "status": "APPROVED",
      "teamId": 6,
      "updatedAt": 2017-01-01T08:00:00.000Z,
    },
    Object {
      "approvedBy": 13,
      "createdAt": 2017-01-01T07:00:00.001Z,
      "email": 4,
      "id": 12,
      "isActive": true,
      "orgId": 5,
      "status": "APPROVED",
      "teamId": 7,
      "updatedAt": 2017-01-01T08:00:00.000Z,
    },
  ],
}
`;

exports[`approveToOrg for a 2-team approval with different inviters, sends teamInvite, clears requestNewUser, sends inviteeApproved 2`] = `
Object {
  "invitationAdded": Array [
    Object {
      "channelId": "<<constant>>",
      "message": Object {
        "invitationAdded": Object {
          "invitation": Object {
            "createdAt": 2017-01-01T08:00:00.000Z,
            "email": "<<constant>>",
            "hashedToken": "<<constant>>",
            "id": "<<constant>>",
            "inviteCount": 1,
            "invitedBy": "<<constant>>",
            "teamId": "<<constant>>",
            "tokenExpiration": 2017-01-31T08:00:00.000Z,
            "updatedAt": 2017-01-01T08:00:00.000Z,
          },
        },
        "operationId": 0,
      },
    },
    Object {
      "channelId": "<<constant>>",
      "message": Object {
        "invitationAdded": Object {
          "invitation": Object {
            "createdAt": 2017-01-01T08:00:00.000Z,
            "email": "<<constant>>",
            "hashedToken": "<<constant>>",
            "id": "<<constant>>",
            "inviteCount": 1,
            "invitedBy": "<<constant>>",
            "teamId": "<<constant>>",
            "tokenExpiration": 2017-01-31T08:00:00.000Z,
            "updatedAt": 2017-01-01T08:00:00.000Z,
          },
        },
        "operationId": 0,
      },
    },
  ],
  "notificationsAdded": Array [
    Object {
      "channelId": 8,
      "message": Object {
        "notificationsAdded": Object {
          "notifications": Array [
            Object {
              "id": 0,
              "inviteeEmail": 4,
              "inviterName": "Vision",
              "orgId": 5,
              "startAt": 2017-01-01T08:00:00.000Z,
              "teamId": 6,
              "teamName": "Team America",
              "type": "INVITEE_APPROVED",
              "userIds": Array [
                8,
              ],
            },
          ],
        },
        "operationId": 0,
      },
    },
    Object {
      "channelId": 9,
      "message": Object {
        "notificationsAdded": Object {
          "notifications": Array [
            Object {
              "id": 1,
              "inviteeEmail": 4,
              "inviterName": "Vision",
              "orgId": 5,
              "startAt": 2017-01-01T08:00:00.000Z,
              "teamId": 6,
              "teamName": "Team America",
              "type": "TEAM_INVITE",
              "userIds": Array [
                9,
              ],
            },
          ],
        },
        "operationId": 0,
      },
    },
    Object {
      "channelId": 10,
      "message": Object {
        "notificationsAdded": Object {
          "notifications": Array [
            Object {
              "id": 2,
              "inviteeEmail": 4,
              "inviterName": "War Machine",
              "orgId": 5,
              "startAt": 2017-01-01T08:00:00.000Z,
              "teamId": 7,
              "teamName": "team 2",
              "type": "INVITEE_APPROVED",
              "userIds": Array [
                10,
              ],
            },
          ],
        },
        "operationId": 0,
      },
    },
    Object {
      "channelId": 9,
      "message": Object {
        "notificationsAdded": Object {
          "notifications": Array [
            Object {
              "id": 3,
              "inviteeEmail": 4,
              "inviterName": "War Machine",
              "orgId": 5,
              "startAt": 2017-01-01T08:00:00.000Z,
              "teamId": 7,
              "teamName": "team 2",
              "type": "TEAM_INVITE",
              "userIds": Array [
                9,
              ],
            },
          ],
        },
        "operationId": 0,
      },
    },
  ],
  "notificationsCleared": Array [
    Object {
      "channelId": 13,
      "message": Object {
        "mutatorId": undefined,
        "notificationsCleared": Object {
          "deletedIds": Array [
            14,
            15,
          ],
        },
        "operationId": 0,
      },
    },
  ],
  "orgApprovalRemoved": Array [
    Object {
      "channelId": 6,
      "message": Object {
        "operationId": 0,
        "orgApprovalRemoved": Object {
          "orgApproval": Object {
            "approvedBy": 13,
            "createdAt": 2017-01-01T07:00:00.000Z,
            "email": 4,
            "id": 11,
            "isActive": true,
            "orgId": 5,
            "status": "APPROVED",
            "teamId": 6,
            "updatedAt": 2017-01-01T08:00:00.000Z,
          },
        },
      },
    },
    Object {
      "channelId": 7,
      "message": Object {
        "operationId": 0,
        "orgApprovalRemoved": Object {
          "orgApproval": Object {
            "approvedBy": 13,
            "createdAt": 2017-01-01T07:00:00.001Z,
            "email": 4,
            "id": 12,
            "isActive": true,
            "orgId": 5,
            "status": "APPROVED",
            "teamId": 7,
            "updatedAt": 2017-01-01T08:00:00.000Z,
          },
        },
      },
    },
  ],
}
`;

exports[`approveToOrg for a 2-team approval with different inviters, sends teamInvite, clears requestNewUser, sends inviteeApproved 3`] = `
Object {
  "deletedIds": Array [
    16,
    17,
  ],
}
`;

exports[`approveToOrg for a 2-team approval with the same inviter, sends teamInvite, clears requestNewUser, sends inviteeApproved 1`] = `
Object {
  "invitation": Array [
    Object {
      "createdAt": 2017-01-01T08:00:00.000Z,
      "email": "<<constant>>",
      "hashedToken": "HA$H",
      "id": "<<constant>>",
      "inviteCount": 1,
      "invitedBy": "<<constant>>",
      "teamId": "<<constant>>",
      "tokenExpiration": 2017-01-31T08:00:00.000Z,
      "updatedAt": 2017-01-01T08:00:00.000Z,
    },
    Object {
      "createdAt": 2017-01-01T08:00:00.000Z,
      "email": "<<constant>>",
      "hashedToken": "HA$H",
      "id": "<<constant>>",
      "inviteCount": 1,
      "invitedBy": "<<constant>>",
      "teamId": "<<constant>>",
      "tokenExpiration": 2017-01-31T08:00:00.000Z,
      "updatedAt": 2017-01-01T08:00:00.000Z,
    },
  ],
  "notification": Array [
    Object {
      "id": 0,
      "inviteeEmail": 4,
      "inviterName": "Vision",
      "orgId": 5,
      "startAt": 2017-01-01T08:00:00.000Z,
      "teamId": 6,
      "teamName": "Team America",
      "type": "INVITEE_APPROVED",
      "userIds": Array [
        8,
      ],
    },
    Object {
      "id": 1,
      "inviteeEmail": 4,
      "inviterName": "Vision",
      "orgId": 5,
      "startAt": 2017-01-01T08:00:00.000Z,
      "teamId": 6,
      "teamName": "Team America",
      "type": "TEAM_INVITE",
      "userIds": Array [
        9,
      ],
    },
    Object {
      "id": 2,
      "inviteeEmail": 4,
      "inviterName": "Vision",
      "orgId": 5,
      "startAt": 2017-01-01T08:00:00.000Z,
      "teamId": 7,
      "teamName": "team 2",
      "type": "INVITEE_APPROVED",
      "userIds": Array [
        8,
      ],
    },
    Object {
      "id": 3,
      "inviteeEmail": 4,
      "inviterName": "Vision",
      "orgId": 5,
      "startAt": 2017-01-01T08:00:00.000Z,
      "teamId": 7,
      "teamName": "team 2",
      "type": "TEAM_INVITE",
      "userIds": Array [
        9,
      ],
    },
  ],
  "orgApproval": Array [
    Object {
      "approvedBy": 12,
      "createdAt": 2017-01-01T07:00:00.000Z,
      "email": 4,
      "id": 10,
      "isActive": true,
      "orgId": 5,
      "status": "APPROVED",
      "teamId": 6,
      "updatedAt": 2017-01-01T08:00:00.000Z,
    },
    Object {
      "approvedBy": 12,
      "createdAt": 2017-01-01T07:00:00.001Z,
      "email": 4,
      "id": 11,
      "isActive": true,
      "orgId": 5,
      "status": "APPROVED",
      "teamId": 7,
      "updatedAt": 2017-01-01T08:00:00.000Z,
    },
  ],
}
`;

exports[`approveToOrg for a 2-team approval with the same inviter, sends teamInvite, clears requestNewUser, sends inviteeApproved 2`] = `
Object {
  "deletedIds": Array [
    13,
    14,
  ],
}
`;

exports[`approveToOrg for a 2-team approval with the same inviter, sends teamInvite, clears requestNewUser, sends inviteeApproved 3`] = `
Object {
  "invitationAdded": Array [
    Object {
      "channelId": "<<constant>>",
      "message": Object {
        "invitationAdded": Object {
          "invitation": Object {
            "createdAt": 2017-01-01T08:00:00.000Z,
            "email": "<<constant>>",
            "hashedToken": "<<constant>>",
            "id": "<<constant>>",
            "inviteCount": 1,
            "invitedBy": "<<constant>>",
            "teamId": "<<constant>>",
            "tokenExpiration": 2017-01-31T08:00:00.000Z,
            "updatedAt": 2017-01-01T08:00:00.000Z,
          },
        },
        "operationId": 0,
      },
    },
    Object {
      "channelId": "<<constant>>",
      "message": Object {
        "invitationAdded": Object {
          "invitation": Object {
            "createdAt": 2017-01-01T08:00:00.000Z,
            "email": "<<constant>>",
            "hashedToken": "<<constant>>",
            "id": "<<constant>>",
            "inviteCount": 1,
            "invitedBy": "<<constant>>",
            "teamId": "<<constant>>",
            "tokenExpiration": 2017-01-31T08:00:00.000Z,
            "updatedAt": 2017-01-01T08:00:00.000Z,
          },
        },
        "operationId": 0,
      },
    },
  ],
  "notificationsAdded": Array [
    Object {
      "channelId": 8,
      "message": Object {
        "notificationsAdded": Object {
          "notifications": Array [
            Object {
              "id": 0,
              "inviteeEmail": 4,
              "inviterName": "Vision",
              "orgId": 5,
              "startAt": 2017-01-01T08:00:00.000Z,
              "teamId": 6,
              "teamName": "Team America",
              "type": "INVITEE_APPROVED",
              "userIds": Array [
                8,
              ],
            },
          ],
        },
        "operationId": 0,
      },
    },
    Object {
      "channelId": 9,
      "message": Object {
        "notificationsAdded": Object {
          "notifications": Array [
            Object {
              "id": 1,
              "inviteeEmail": 4,
              "inviterName": "Vision",
              "orgId": 5,
              "startAt": 2017-01-01T08:00:00.000Z,
              "teamId": 6,
              "teamName": "Team America",
              "type": "TEAM_INVITE",
              "userIds": Array [
                9,
              ],
            },
          ],
        },
        "operationId": 0,
      },
    },
    Object {
      "channelId": 8,
      "message": Object {
        "notificationsAdded": Object {
          "notifications": Array [
            Object {
              "id": 2,
              "inviteeEmail": 4,
              "inviterName": "Vision",
              "orgId": 5,
              "startAt": 2017-01-01T08:00:00.000Z,
              "teamId": 7,
              "teamName": "team 2",
              "type": "INVITEE_APPROVED",
              "userIds": Array [
                8,
              ],
            },
          ],
        },
        "operationId": 0,
      },
    },
    Object {
      "channelId": 9,
      "message": Object {
        "notificationsAdded": Object {
          "notifications": Array [
            Object {
              "id": 3,
              "inviteeEmail": 4,
              "inviterName": "Vision",
              "orgId": 5,
              "startAt": 2017-01-01T08:00:00.000Z,
              "teamId": 7,
              "teamName": "team 2",
              "type": "TEAM_INVITE",
              "userIds": Array [
                9,
              ],
            },
          ],
        },
        "operationId": 0,
      },
    },
  ],
  "notificationsCleared": Array [
    Object {
      "channelId": 12,
      "message": Object {
        "mutatorId": undefined,
        "notificationsCleared": Object {
          "deletedIds": Array [
            15,
            16,
          ],
        },
        "operationId": 0,
      },
    },
  ],
  "orgApprovalRemoved": Array [
    Object {
      "channelId": 6,
      "message": Object {
        "operationId": 0,
        "orgApprovalRemoved": Object {
          "orgApproval": Object {
            "approvedBy": 12,
            "createdAt": 2017-01-01T07:00:00.000Z,
            "email": 4,
            "id": 10,
            "isActive": true,
            "orgId": 5,
            "status": "APPROVED",
            "teamId": 6,
            "updatedAt": 2017-01-01T08:00:00.000Z,
          },
        },
      },
    },
    Object {
      "channelId": 7,
      "message": Object {
        "operationId": 0,
        "orgApprovalRemoved": Object {
          "orgApproval": Object {
            "approvedBy": 12,
            "createdAt": 2017-01-01T07:00:00.001Z,
            "email": 4,
            "id": 11,
            "isActive": true,
            "orgId": 5,
            "status": "APPROVED",
            "teamId": 7,
            "updatedAt": 2017-01-01T08:00:00.000Z,
          },
        },
      },
    },
  ],
}
`;

exports[`approveToOrg throws if the caller does not own the notification 1`] = `"Unauthorized. User is not a Billing Leader for that organization"`;
